--- a/TDFit/TDFit/TDFit.csproj
+++ b/TDFit/TDFit/TDFit.csproj
@@ -31,6 +31,7 @@
     <Compile Remove="Views\CustomMasterMaster.xaml.cs" />
     <Compile Remove="Views\CustomMasterMasterMenuItem.cs" />
     <Compile Remove="Views\CustomMasterPage.xaml.cs" />
+    <Compile Remove="Views\KeepDietPage.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -56,7 +57,13 @@
     <EmbeddedResource Update="Views\CustomMaster.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\DietPlan.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\GainWeight.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\KeepDietPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\KeepWeight.xaml">
@@ -72,6 +79,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\RegisterPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\SummaryPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\TrainingDiary.xaml">
