--- a/TDFit/TDFit/TDFit.csproj
+++ b/TDFit/TDFit/TDFit.csproj
@@ -51,6 +51,7 @@
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.0.0.5" />
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Xfx.Controls" Version="1.2.1" />
   </ItemGroup>
 
   <ItemGroup>
